--- a/NoiseBuddy/Resources/Preferences.storyboard
+++ b/NoiseBuddy/Resources/Preferences.storyboard
@@ -10,11 +10,11 @@
             <objects>
                 <viewController id="vEC-vv-neH" customClass="PreferencesViewController" customModule="NoiseBuddy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="zvt-e0-aNC">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="199"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="222"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ymr-0e-7eJ">
-                                <rect key="frame" x="20" y="117" width="181" height="62"/>
+                                <rect key="frame" x="20" y="140" width="181" height="62"/>
                                 <subviews>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3Gr-bi-rj7">
                                         <rect key="frame" x="-2" y="46" width="115" height="18"/>
@@ -59,8 +59,19 @@
                                 </customSpacing>
                             </stackView>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I1O-Ie-FqK">
-                                <rect key="frame" x="20" y="20" width="262" height="38"/>
+                                <rect key="frame" x="20" y="20" width="262" height="61"/>
                                 <subviews>
+                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qJt-y9-LcD" customClass="ActionLabel" customModule="NoiseBuddy" customModuleProvider="target">
+                                        <rect key="frame" x="-2" y="46" width="38" height="15"/>
+                                        <textFieldCell key="cell" lineBreakMode="clipping" title="About" id="IXc-8F-ChU">
+                                            <font key="font" metaFont="cellTitle"/>
+                                            <color key="textColor" name="linkColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                        <connections>
+                                            <action selector="orderFrontStandardAboutPanel:" target="tX6-ul-a2Z" id="nXP-fm-9W1"/>
+                                        </connections>
+                                    </textField>
                                     <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vcI-sb-CkU">
                                         <rect key="frame" x="0.0" y="23" width="245" height="15"/>
                                         <subviews>
@@ -149,8 +160,10 @@
                                 <visibilityPriorities>
                                     <integer value="1000"/>
                                     <integer value="1000"/>
+                                    <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
